src/snapshots/ruff__linter__tests__D203_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    OneBlankLineBeforeClass: 0
  location:
    row: 161
    column: 4
  end_location:
    row: 161
    column: 32
  fix:
    patch:
      content: "\n"
      location:
        row: 161
        column: 0
      end_location:
        row: 161
        column: 0
- kind:
    OneBlankLineBeforeClass: 0
  location:
    row: 192
    column: 4
  end_location:
    row: 192
    column: 45
  fix:
    patch:
      content: "\n"
      location:
        row: 192
        column: 0
      end_location:
        row: 192
        column: 0
- kind:
    OneBlankLineBeforeClass: 0
  location:
    row: 526
    column: 4
  end_location:
    row: 532
    column: 7
  fix:
    patch:
      content: "\n"
      location:
        row: 526
        column: 0
      end_location:
        row: 526
        column: 0

